<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">도시농부</string>
    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="id_hint">아이디</string>
    <string name="pwd_hint">비밀번호</string>
    <string name="search">아이디/비밀번호 찾기</string>
    <string name="pwd_hint2">비밀번호(영문+숫자+특수문자 8-15자)</string>
    <string name="pwd_conf">비밀번호 확인</string>
    <string name="consent_info">이용 약관, 개인 정보 수집/이용 동의</string>
    <string name="age_order">만14세 이상입니다</string>
    <string name="singup_completed">회원가입이 완료 되었습니다.</string>
    <string name="login_and_use">로그인 후 이용해 주시길 바랍니다.</string>
    <string name="cellphone_number">전화번호</string>
    <string name="date_of_birth">생년월일</string>
    <string name="name">홍길동</string>
    <string name="info">내 정보</string>
    <string name="gildong_information">홍길동 님의 정보</string>
    <string name="modification_completed">수정 완료</string>
    <string name="id">아이디</string>
    <string name="withdrawl">회원 탈퇴</string>
    <string name="name_hint">이름</string>
    <string name="modify">수정</string>
    <string name="right_leave">정말로 탈퇴하시겠습니까?</string>
    <string name="yes">예</string>
    <string name="no">아니요</string>

</resources>