<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center" android:orientation="vertical">

    <TextView
        android:id="@+id/really"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/right_leave"
        android:textColor="#ff000000"
        android:textSize="20sp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30sp">
        <Button
            android:id="@+id/sign_out_yes"
            android:layout_width="120sp"
            android:layout_height="45sp"
            android:layout_margin="20sp"
            android:background="@drawable/radius_red"
            android:text="@string/yes"
            android:textColor="#ffffffff"/>
        <Button
            android:id="@+id/sign_out_no"
            android:layout_width="120sp"
            android:layout_height="45sp"
            android:layout_margin="20sp"
            android:background="@drawable/radius_white"
            android:text="@string/no"/>
    </LinearLayout>
</LinearLayout>