<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="2560">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/sub_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white">

            <ImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:src="@drawable/icon_info">

            </ImageView>
            <TextView
                android:id="@+id/secText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="10pt"
                android:textColor="#000000"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/toolbar_bottom"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:padding="20sp">
        <TextView
            android:id="@+id/username_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:text="@string/gildong_information"
            android:textColor="#ff000000"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/complete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/modification_completed"
            android:textColor="#FF007AFF"
            android:gravity="right"
            android:clickable="true"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_margin="30sp"
        android:layout_gravity="center"
        android:background="@drawable/profile_noimage"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20sp"
        android:stretchColumns="0,1">
        <TableRow>
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_hint"
                android:textColor="#ff000000"
                android:textSize="16sp"
                android:height="40sp"/>
            <EditText
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:enabled="false"
                android:textColor="#ff000000"
                android:textSize="16sp"
                android:gravity="right"
                android:height="40sp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth"
                android:textColor="#ff000000"
                android:textSize="16sp"
                android:height="40sp"/>
            <EditText
                android:id="@+id/user_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1995. 11. 24"
                android:textColor="#ff000000"
                android:textSize="16sp"
                android:gravity="right"
                android:height="40sp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cellphone_number"
                android:textColor="#ff000000"
                android:textSize="16sp"
                android:height="40sp"/>
            <EditText
                android:id="@+id/user_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="010-1234-5678"
                android:textColor="#ff000000"
                android:textSize="16sp"
                android:gravity="right"
                android:height="40sp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textColor="#ff000000"
                android:textSize="16sp"
                android:height="40sp"/>
            <EditText
                android:id="@+id/user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="example12"
                android:textColor="#ff000000"
                android:textSize="16sp"
                android:gravity="right"
                android:height="40sp"/>
        </TableRow>
        <TableRow>
            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:layout_span="2"
                android:layout_marginBottom="35sp"
                android:background="#ffDEDEDE"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/sign_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/withdrawl"
                android:textColor="#ffff0000"
                android:textSize="16sp"
                />
        </TableRow>
    </TableLayout>
</LinearLayout>