<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:gravity="center" android:orientation="vertical">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:src="@drawable/logo" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp" >

        <EditText
            android:id="@+id/et_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_gray"
            android:ems="10"
            android:hint="@string/id_hint"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint"
            android:textSize="20dp" />
        <EditText
            android:id="@+id/et_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_gray"
            android:hint="@string/pwd_hint"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="20dp"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/login"
            android:layout_margin="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:background="@drawable/button_background"
            android:text="@string/login"
            android:textSize="17dp"
            android:textColor="@color/white" />
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textColor="@color/gray"
            android:textSize="16dp"
            android:background="@android:color/transparent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="   /   "
            android:textColor="@color/gray"
            android:textSize="16dp"/>

        <Button
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/signup"
            android:textColor="@color/gray"
            android:textSize="16dp"/>

    </LinearLayout>

</LinearLayout>