<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center" android:orientation="vertical">



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp" >
        <ImageView
            android:layout_width="200dp"
            android:layout_height="150dp"

            android:src="@drawable/logo" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/singup_completed"
            android:textSize="22dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/input_register"
            android:gravity="center_horizontal" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:text="@string/login_and_use"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/input_register"
            android:gravity="center_horizontal" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="17dp"
        android:layout_marginTop="20dp"
        android:id="@+id/login"
        android:background="@drawable/button_background"
        android:textColor="#ffffff"/>
    </LinearLayout>
</LinearLayout>