<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center" android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp" >

        <ImageView
            android:layout_width="150dp"
            android:layout_height="129dp"
            android:src="@drawable/logo" />
        <EditText
            android:id="@+id/signup_name"
            android:ems="10"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_gray"
            android:hint="이름"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textSize="17dp"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />
        <EditText
            android:id="@+id/signup_cell"
            android:ems="10"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_gray"
            android:hint="현재 강동구 텃밭 농부라면 텃밭 이름"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textSize="17dp"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/signup_id"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_gray"
                android:hint="@string/id_hint"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textSize="17dp"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />


        </LinearLayout>
        <EditText
            android:id="@+id/signup_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_gray"
            android:hint="@string/pwd_hint2"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="17dp"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />


        <EditText
            android:id="@+id/signup_passwordcheck"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_gray"
            android:hint="@string/pwd_conf"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="17dp"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
        <CheckBox
            android:id="@+id/signup_ck1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consent_info"
            android:layout_gravity="left" />
        <CheckBox
            android:id="@+id/signup_ck2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_order"
            android:layout_gravity="left" />
            </LinearLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>
    <Button
        android:id="@+id/signup_signUP"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textSize="17dp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_background"
        android:textColor="#ffffff"/>

</LinearLayout>